examples/test/testpolicy6000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6000
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key3: value17
      key12: value41
      key0: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value5
      podSelector:
        matchLabels:
          key20: value13
          key22: value22
          key42: value49
